--- a/css/base/summary.css
+++ b/css/base/summary.css
@@ -29,29 +29,32 @@ details {
 		position: relative;
 		font-weight: 500;
 		cursor: pointer;
-		padding-left: 1rem;
-		list-style-type: none;
+		
+		@media (forced-colors: inactive) {
+			padding-left: 1rem;
+			list-style-type: none;
 
-		&::marker,
-		&::-webkit-details-marker {
-			display: none;
-		}
+			&::marker,
+			&::-webkit-details-marker {
+				display: none;
+			}
 
-		&::before {
-			content: "";
-			position: absolute;
-			left: -1ch;
-			width: 0;
-			height: 0;
-			border: 0.5rem solid transparent;
-			border-left: 0.5rem solid var(--col-accent);
-			transform: translate(0.625rem, 0.25lh) rotate(var(--dstr, 0deg));
-			transform-origin: 25% center;
-			transition: transform calc(0.1s * var(--enable-animation, 1)) ease-out;
-		}
+			&::before {
+				content: "";
+				position: absolute;
+				left: -1ch;
+				width: 0;
+				height: 0;
+				border: 0.5rem solid transparent;
+				border-left: 0.5rem solid var(--col-accent);
+				transform: translate(0.625rem, 0.25lh) rotate(var(--dstr, 0deg));
+				transform-origin: 25% center;
+				transition: transform calc(0.1s * var(--enable-animation, 1)) ease-out;
+			}
 
-		&:hover::before {
-			border-left-color: var(--col-accent2);
+			&:hover::before {
+				border-left-color: var(--col-accent2);
+			}
 		}
 	}
 
